--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Snehal J",
+  "author": "Manswini Gawas",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
